[SYNCOPE-1928] Implementing self-refresh behavior via WebSocket